--- a/journal/202211.md
+++ b/journal/202211.md
@@ -201,7 +201,7 @@ of those actions generates a notification. (img cand)
 Client:
 
 - Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed.
-- Fixed a bug where [orders](https://github.com/decred/dcrdex/pull/1971) would be retired/non-existent but still booked on the server.
+- Fixed bug where [orders](https://github.com/decred/dcrdex/pull/1971) would be retired/non-existent but still booked on the server.
 - Fixed issue where [unknown orders](https://github.com/decred/dcrdex/pull/1889) would be blindly canceled on connect. {?}
 - Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields.
 - Advanced [pre-order options](https://github.com/decred/dcrdex/pull/1885) can now be shown and hidden. {?}
@@ -224,7 +224,6 @@ Major work completed towards support for fidelity bonds. {?}
 - Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in 'markets.json'.
 - Added 'BondCoin' [bond locator](https://github.com/decred/dcrdex/pull/1819) method.
 - Added necessary [archiver methods](https://github.com/decred/dcrdex/pull/1819) to create accounts with bonds, add new bonds to existing accounts, and remove expired bonds.
-- 
 
 DCR
 
