add some rel ext

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -496,7 +496,17 @@ In November DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}.
 
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
 
+The US Attorney's Office has [confiscated](https://www.justice.gov/usao-sdny/pr/us-attorney-announces-historic-336-billion-cryptocurrency-seizure-and-conviction) over 50,000 BTC (valued at $3.36 Billion) which was apparently obtained through "a sophisticated scheme designed to steal bitcoin from the notorious Silk Road Marketplace". The sophisticated scheme involved depositing BTC and then immediately (*i.e.* within the same second) requesting withdrawals of this amount multiple times, which would duly be processed by the Silk Road's server at the time. The BTC was confiscated from one James Zhong, along with some cash, equities and precious metals. Some of the BTC was stored "on a single-board computer that was submerged under blankets in a popcorn tin stored in a bathroom closet". Zhong had exchanged the BCH which accrued to their addresses for more BTC on an offshore cryptocurrency exchange, and this may have played a role in allowing the authorities to track him down.
+
+The cryptocurrency exchange FTX has [filed](https://www.protocol.com/bulletins/ftx-bankruptcy-sam-bankman-fried) for bankruptcy protection and halted all withdrawals for its International and US sites, affecting [over](https://www.reuters.com/technology/ftx-officials-contact-with-us-regulators-filing-2022-11-15/) 1 million users. The collapse of FTX started with a [story](https://www.coindesk.com/business/2022/11/02/divisions-in-sam-bankman-frieds-crypto-empire-blur-on-his-trading-titan-alamedas-balance-sheet/) on Coindesk about a leaked balance sheet for Alameda Research (one of Sam Bankman-Fried's companies) indicating that it was heavily reliant on FTT tokens (for the FTX exchange) which it was placing a higher than market value on.  CZ of Binance fuelled the fire by suggesting that Binance would liquidate its substantial FTT holdings in light of this information. Alameda tried to prop up the FTT price for some time but it dropped significantly and this made them insolvent, in the process triggering a run of withdrawal requests from increasingly panicked FTX users which ultimately FTX was unable to meet. SBF confirmed that something was very wrong by [tweeting](https://twitter.com/SBF_FTX/status/1590012124864348160) that Binance were going to step in and buy FTX to ensure all customers would be able to access their funds, an arrangement which [fell apart](https://twitter.com/binance/status/1590449161069268992) within a day, and within a few days there were [reports](https://www.reuters.com/markets/currencies/crypto-markets-teeter-with-ftx-after-binance-abandons-bailout-2022-11-10/) that SBF was looking for a $9.4 Billion rescue package from investors. After declaring bankruptcy a big chunk of FTX's crypto balances started moving, it has apparently been "hacked" by a (former) insider. The appointed administrator has [criticised](https://www.theguardian.com/technology/2022/nov/17/ftx-enron-crypto-collapse-john-ray-unprecedented) FTX as one of the worst run companies he has ever seen (he administered Enron's bankruptcy among others). SBF has been tweeting and giving interviews intermittently throughout the saga, [against](https://www.coindesk.com/layer2/2022/12/02/sam-bankman-frieds-self-incrimination-tour/) the advice of his lawyers (who have dropped him as a client), and many crypto commentators have been [lamenting](https://www.coindesk.com/layer2/2022/11/30/ftxs-collapse-was-a-crime-not-an-accident/) the relatively kind treatment he has received in the mainstream press.
+
+There have been a number of high profile crypto companies who have struggled with the [contagion](https://www.coindesk.com/markets/2022/11/23/ftx-contagion-revives-dreaded-2022-crypto-knell-the-withdrawal-halt/) of FTX/Alameda's collapse and the unravelling "Sam coins". The Gemini exchange had to [pause](https://www.bankingdive.com/news/blockfi-bankruptcy-gemini-genesis-halt-withdrawal-redemption-ftx-lawsuit/636715/) withdrawals and BlockFi first suspended withdrawals then filed for [bankruptcy](https://blockfi.com/November28-ClientUpdate). The Digital Currency Group's brokerage Genesis [suspended](https://www.forbes.com/sites/jonathanponciano/2022/11/16/crypto-lender-genesis-suspends-withdrawals-ftx-collapse-created-unprecedented-market-turmoil/) withdrawals, while the Grayscale Trust, another DCG company, saw GBTC trading at a 45% discount to BTC, as they [failed](https://www.cnbc.com/2022/11/21/grayscale-wont-share-proof-of-reserves-due-to-security-concerns.html) to provide definitive "Proof of Reserves".
+
+Proof of Reserves (PoR) is a way of keeping exchanges honest by publishing addresses where they hold customer funds, ideally alongside a list of liabilities, in the aftermath of the FTX collapse PoR has seen renewed attention and [several](https://www.coindesk.com/tech/2022/11/17/proof-of-reserves-emerges-as-a-favored-way-to-prevent-another-ftx/) exchanges have implemented versions of it to assure customers that their assets are safely held. Nic Carter has a [website](https://niccarter.info/proof-of-reserves/) which outlines the concept and tracks which exchanges have implemented some kind of PoR. There have been [questions](https://beincrypto.com/crypto-exchanges-gate-io-and-crypto-com-appear-to-be-faking-proof-of-reserves/) raised about some of the PoR efforts of exchanges, in particular Crypto.com "mistakenly" sending over $400M worth of Ethereum to Gate.io was seen as a possible attempt to cheat by one or both exchanges.
+
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
+
+https://www.justice.gov/usao-sdny/pr/us-attorney-announces-historic-336-billion-cryptocurrency-seizure-and-conviction
 
 { _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._ }
 
