--- a/journal/202211.md
+++ b/journal/202211.md
@@ -61,7 +61,12 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
-- {}
+- Update peer [attempt timestamp](https://github.com/decred/dcrd/pull/3014) before trying to connect to it.
+- Simplified how raw transactions and their additional [descriptions](https://github.com/decred/dcrd/pull/3015) are stored in the mempool.
+- Tweaked [memory management](https://github.com/decred/dcrd/pull/3016) to spend less CPU time doing garbage collection. With this dcrd can perform the initial chain sync about 10% faster at the cost of using more memory. A nice side benefit is that advanced sysadmins can now tune this behavior using an environment variable.
+- [Enabled](https://github.com/decred/dcrd/pull/3017) and set [as default](https://github.com/decred/dcrd/pull/3019) new peer-to-peer protocol version that no longer uses the `reject` message. The message was inherited from the original btcsuite codebase and was used to signal that a transaction or a block is ["rejected"](https://en.bitcoin.it/wiki/Protocol_documentation#reject) by a peer. Using this message for pretty much anything was unreliable or incorrect and a [proposal](https://github.com/decred/dcrd/issues/2546) was made to remove it. Peers negotiating to this new protocol version will no longer send `reject` messages and consider it a violation if they receive it. Any peers negotiating to an older version will not be punished for sending `reject` and it will be ignored by newer nodes.
+- Added new [IPC events](https://github.com/decred/dcrd/pull/3020) 
+- Other changes { 3021 }
 
 
 ### dcrwallet
