add some rel ext

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -199,7 +199,6 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-
 A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added to **core**. The bot uses some internal and
 (optionally) external signals to calculate a ideal buy and sell
 price and a "break-even spread", which is the spread at which
@@ -344,7 +343,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In November the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at November's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at November's rate, or ${} at October's billing rate of $26.27.
+In November the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at November's average rate of $21.92. {} DCR was spent to pay contractors, worth ${} at November's rate, or ${} at October's billing rate of $26.27.
 
 The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
 
@@ -518,8 +517,6 @@ Proof of Reserves (PoR) is a way of keeping exchanges honest by publishing addre
 
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
 
-https://www.justice.gov/usao-sdny/pr/us-attorney-announces-historic-336-billion-cryptocurrency-seizure-and-conviction
-
 { _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._ }
 
 { _L2+ tech: "Smart" contracts, DEX projects._ }
@@ -527,6 +524,8 @@ https://www.justice.gov/usao-sdny/pr/us-attorney-announces-historic-336-billion-
 { _Governance, finances, funding, chain forks, community splits._ }
 
 https://cointelegraph.com/news/makerdao-co-founder-nikolai-mushegian-dies-at-29-in-puerto-rico { relevant? }
+
+The LBRY content network, best known for Odysee video app, [lost](https://www.coindesk.com/policy/2022/11/07/lbry-sold-tokens-as-securities-federal-judge-rules/) its long-running case against the SEC for selling LBRY tokens as an unregistered security. The judge issued a summary judgment that the LBRY tokens were obviously securities, with comments which cast a wide net and would see the majority of crypto tokens classified as securities. 
 
 { LBRY lawsuit story (LBRY powers Odysee):
 
@@ -536,6 +535,8 @@ https://cointelegraph.com/news/makerdao-co-founder-nikolai-mushegian-dies-at-29-
 - https://www.reuters.com/legal/transactional/us-securities-regulators-win-case-against-crypto-company-lbry-2022-11-07/
 
 }
+
+The 
 
 { _Relevant exchanges and websites._ }
 
