--- a/journal/202211.md
+++ b/journal/202211.md
@@ -110,21 +110,21 @@ Decredition's Wallet Launcher has been [redesigned](https://github.com/decred/de
 DEX:
 
 - Fixed problem where DEX window [wouldn't launch](https://github.com/decred/decrediton/pull/3831) after reloading UI.
-- When changing [wallet passphrase](https://github.com/decred/decrediton/pull/3822), users can enter their DEX app password to propagate the changes to their DEX account. {confusing, need to update}
+- When changing [wallet passphrase](https://github.com/decred/decrediton/pull/3822), users can enter their DEX app password to propagate the changes to their DEX account. { _confusing, need to update_ }
 - [Removed](https://github.com/decred/decrediton/pull/3800) all BTC wallet type selection and added tests for the DEX.
 - [Bumped](https://github.com/decred/decrediton/pull/3834) DCRDEX to v0.5.6.
 
-Other changes: {need to update Controlactions section}
+Other changes: { _need to update Controlactions section_ }
 
 - Fixed issue where [focus](https://github.com/decred/decrediton/pull/3839) between seed words was lost on the Trezor word modal.
-- Applied [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS 5. With this, users can configure dcrd/dcrwallet as a Tor client. (img candidate)
+- Applied [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS 5. With this, users can configure dcrd/dcrwallet as a Tor client. { _img candidate_ }
 - Added [translations](https://github.com/decred/decrediton/pull/3719) for Greek.
 - Fixed an issue in the Lightning Network tab where the "Close Channel" button was [hidden](https://github.com/decred/decrediton/pull/3796) in inactive channels.
-- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer bgptr reports that the process takes 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved. (img candidate).
-- Fixes to transactions action (update).
-- Finished [testing](https://github.com/decred/decrediton/pull/3821) of 'ControlActions'. Also discarded the unused importPrivateKey code and introduced accountMocks which contains shared mocks with AccountMixerActions tests. (more)
+- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer bgptr reports that the process takes 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved. { _img candidate_ } 
+- Fixes to transactions action { _update_ }.
+- Finished [testing](https://github.com/decred/decrediton/pull/3821) of 'ControlActions'. Also discarded the unused importPrivateKey code and introduced accountMocks which contains shared mocks with AccountMixerActions tests. { _more_ }
 - Removed all [legacy stakepool related code](https://github.com/decred/decrediton/pull/3808). Also cleaned up the code structure relating to ticket purchases and auto buyer. The privacy tab now properly shows that mixes are created every 10 minutes, not 20.
-- Redesigned the [Trezor wallet viewpage](https://github.com/decred/decrediton/pull/3570). (img candidate)
+- Redesigned the [Trezor wallet viewpage](https://github.com/decred/decrediton/pull/3570). { _img candidate_ }
 - Automated tests for 'DaemonActions'.
 - Added [links to documentation](https://github.com/decred/decrediton/pull/3802) in the form of question mark blurbs throughout the wallet.
 - Recently updated VSPs now have vote choices [resent](https://github.com/decred/decrediton/pull/3738).
