--- a/journal/202211.md
+++ b/journal/202211.md
@@ -100,9 +100,9 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 Decredition's Wallet Launcher has been [redesigned](https://github.com/decred/decrediton/pull/3690):
 
 - Added onboarding tutorials to the launcher.
-- Added gradients to the wallet cards. One gradient is connected to an exact wallet and saved to the config. 
+- Added gradients to the wallet cards. Each wallet's gradient is saved in the config.
 - Moved the redesigned progress bar to the bottom. 
-- Removed the `RescanWallet` component. The rescan progress is integrated now into the progress bar and the onboarding tutorials list is displayed during the progress.
+- Removed the `RescanWallet` component. The rescan progress is now integrated into the progress bar and the onboarding tutorials list is displayed during the progress.
 - Introduced a new progress bar indication of the fetching block headers process.
 - Added a Trezor wallet setup option.
 - Added an Automated Wallet Launching modal. User choice is saved to config.
@@ -110,32 +110,34 @@ Decredition's Wallet Launcher has been [redesigned](https://github.com/decred/de
 DEX:
 
 - Fixed problem where DEX window [wouldn't launch](https://github.com/decred/decrediton/pull/3831) after reloading UI.
-- When changing [wallet passphrase](https://github.com/decred/decrediton/pull/3822), users can enter their DEX app password to propagate the changes to their DEX account. { _confusing, need to update_ }
-- [Removed](https://github.com/decred/decrediton/pull/3800) all BTC wallet type selection and added tests for the DEX.
-- [Bumped](https://github.com/decred/decrediton/pull/3834) DCRDEX to v0.5.6.
+- When changing [wallet passphrase](https://github.com/decred/decrediton/pull/3822), users can enter their DEX app password to make the DEX aware of the new wallet passphrase. This fixes confusing passphrase change UX for those using the DEX via Decrediton.
+- [Removed](https://github.com/decred/decrediton/pull/3800) Bitcoin wallet setup steps in favor of the built-in BTC wallet provided by the DEX module. Added tests for DEX views and actions.
+- [Upgraded](https://github.com/decred/decrediton/pull/3834) DCRDEX module to v0.5.6 (bug fixes for BTC and DCR) and added an icon to the DEX window.
 
 Other changes: { _need to update Controlactions section_ }
 
-- Fixed issue where [focus](https://github.com/decred/decrediton/pull/3839) between seed words was lost on the Trezor word modal.
-- Applied [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS 5. With this, users can configure dcrd/dcrwallet as a Tor client.
-- Added [translations](https://github.com/decred/decrediton/pull/3719) for Greek.
-- Fixed an issue in the Lightning Network tab where the "Close Channel" button was [hidden](https://github.com/decred/decrediton/pull/3796) in inactive channels.
-- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer bgptr reports that the process takes 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved.
-- Fixes to transactions action { _update_ }.
-- Finished [testing](https://github.com/decred/decrediton/pull/3821) of `ControlActions`. Also discarded the unused `importPrivateKey` code and introduced `accountMocks` which contains shared mocks with `AccountMixerActions` tests. { _more_ }
+- Fixed issue where [focus](https://github.com/decred/decrediton/pull/3839) was lost between seed words when restoring a Trezor wallet.
+- Apply [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS5. With this, users can configure dcrd and dcrwallet to communicate over the Tor network.
+- Added [basic and advanced](https://github.com/decred/decrediton/blob/fabcf6b81d50ac11c9502af0117d654c21e8c3bc/app/i18n/community_translators.md) translations for [Greek](https://github.com/decred/decrediton/pull/3719).
+- Fixed inability to [close inactive channels](https://github.com/decred/decrediton/pull/3796) in the Lightning Network tab.
+- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer @bgptr reports that the process takes 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved.
+- Fixes to [Transaction views](https://github.com/decred/decrediton/pull/3789): truncate long addresses and account names, show ticket's spending transaction, fixed block hash display, fixed some tickets incorrectly reported as Solo.
+- Finished [testing](https://github.com/decred/decrediton/pull/3821) of `ControlActions`. Also discarded the unused `importPrivateKey` code and introduced `accountMocks` which contains shared mocks with `AccountMixerActions` tests. { _too deep tech/testing stuff, merge into the bullet about tests_ }
 - Removed all [legacy stakepool related code](https://github.com/decred/decrediton/pull/3808). Also cleaned up the code structure relating to ticket purchases and auto buyer. The privacy tab now properly shows that mixes are created every 10 minutes, not 20.
-- Redesigned the [Trezor wallet viewpage](https://github.com/decred/decrediton/pull/3570).
-- Automated tests for `DaemonActions`.
+- Redesigned the [Trezor pages](https://github.com/decred/decrediton/pull/3570).
+- Automated tests for [`DaemonActions`](https://github.com/decred/decrediton/pull/3814). { _merge into a single bullet for tests_ }
 - Added [links to documentation](https://github.com/decred/decrediton/pull/3802) in the form of question mark blurbs throughout the wallet.
-- Recently updated VSPs now have vote choices [resent](https://github.com/decred/decrediton/pull/3738).
-- Added [internal ticket spent](https://github.com/decred/decrediton/pull/3778) and transaction fee links on the transactions details page.
-- Various [CSS fixes](https://github.com/decred/decrediton/pull/3805).
+- Added a launch step to resend vote preferences to [recently upgradeded VSPs](https://github.com/decred/decrediton/pull/3738). Consensus vote choices sent to a VSP running older software are lost because the VSP is not aware of the new consensus votes. If such VSP upgrades, it may be [necessary](https://github.com/decred/decrediton/issues/3723) to resend vote choices to it, so it could vote on latest consensus agendas with the tickets it manages.
+- [Added links](https://github.com/decred/decrediton/pull/3778) to ticket spent and VSP fee on the transactions details page. These links now open locally in Decrediton instead of sending to dcrdata. If the linked transaction is not yet in memory (e.g. it is too old), it will be fetched from dcrwallet in the background.
+- Fixed 4 minor [color and layout](https://github.com/decred/decrediton/pull/3805) issues.
 - Fixed blockchain download [time estimation](https://github.com/decred/decrediton/pull/3815) during syncing.
-- [Fixes](https://github.com/decred/decrediton/pull/3804) to `filterUnlockableAccounts`.
-- Revamped [transaction normalizers](https://github.com/decred/decrediton/pull/3777).
-- Renamed `win32ipc` to `dcrwin32ipc` to [avoid problems](https://github.com/decred/decrediton/pull/3828) with a a remote suspiscious package of the same name.
-- [Upgrades](https://github.com/decred/decrediton/pull/3826) to `pi-ui`.
-- [Bumped](https://github.com/decred/decrediton/pull/3832) `electron` from 17.4.2 to 18.3.7.
+- Fixed undesired [locking](https://github.com/decred/decrediton/pull/3804) of the wallet account used by the auto ticket buyer.
+- Revamped [transaction processing](https://github.com/decred/decrediton/pull/3777) code to improve performance and enable automated testing.
+- Renamed package `win32ipc` to `dcrwin32ipc` to [avoid confusion](https://github.com/decred/decrediton/pull/3828) with a suspiscious remote package of the same name. It was determined that there was never any risk to Decred software from this other suspicious package and Decrediton's module was always loaded from locally built assets.
+- [Upgrades](https://github.com/decred/decrediton/pull/3826) to `pi-ui`. { _minor, merge into dep mgmt_ }
+- [Upgraded](https://github.com/decred/decrediton/pull/3832) electron from v17.4.2 to v18.3.7. { _merge into dep mgmg_ }
+
+{ maybe further break down into smaller lists }
 
 { image candidates: 3570, 3801, 3803 }
 
