--- a/journal/202211.md
+++ b/journal/202211.md
@@ -187,9 +187,10 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check_ https://github.com/decred/vspd/commits/master }
 
+- Added a [`vote-validator` tool](https://github.com/decred/vspd/pull/335). This allows VSP admins to verify that their vspd deployment is voting correctly according to user preferences.
 - Added a [reusable HTTP client module](https://github.com/decred/vspd/pull/359) for vspd API consumers. This will be useful for dcrwallet, dcrwebapi, and testing tools such as v3tool.
-- Added a [vote-validator tool](https://github.com/decred/vspd/pull/335). This allows VSP admins to verify that their vspd deployment is voting correctly according to user preferences.
-- 6 Tweaks/Improvements
+- 6 tweaks and improvements
+
 
 ### Lightning Network
 
