--- a/journal/202211.md
+++ b/journal/202211.md
@@ -188,8 +188,9 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 { _Check_ https://github.com/decred/vspd/commits/master }
 
 - Added a [`vote-validator` tool](https://github.com/decred/vspd/pull/335). This allows VSP admins to verify that their vspd deployment is voting correctly according to user preferences.
-- Added a [reusable HTTP client module](https://github.com/decred/vspd/pull/359) for vspd API consumers. This will be useful for dcrwallet, dcrwebapi, and testing tools such as v3tool.
-- 6 tweaks and improvements
+- Include [Git commit](https://github.com/decred/vspd/pull/357) in app version string.
+- Added a [reusable HTTP client module](https://github.com/decred/vspd/pull/359) for vspd API consumers. This will be useful for dcrwallet, dcrwebapi, and testing tools such as v3tool. { _logically includes 356 360 - just noting for now_ }
+- [Build system](https://github.com/decred/vspd/pull/362) improvements.
 
 
 ### Lightning Network
