Dev DEX format tech names, move image cands, unwrap lines
- Use backtick to show tech names in monospace font.
- Move image candidates to section end and wrap them in { braces } to
  not miss any todos.
- Un-wrap manually wrapped lines. That is, join lines back into
  long-line paragraphs. Devs like to manually break lines to have all
  lines shorter than 80 characters, because some ancient text editors
  still cannot wrap long lines into pretty paragraphs automatically.
  For code, this is also good to generate more precise diffs. For normal
  text I see no good reason to do it. Long lines are nicely wrapped
  automatically by any reasonable editor and browsers, making such text
  "responsive".

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -208,7 +208,6 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 - Added the [option](https://github.com/decred/dcrlnd/pull/170) to switch the gap policy when generating new addresses to Wrap instead of the default one in dcrwallet. This fixes an [issue](https://github.com/decred/dcrlnd/issues/169) where trying to generate an address for lnwallet to open or close a channel would result in an error.
 
 
-
 ### DCRDEX
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
@@ -220,15 +219,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added to **core**. The bot uses some internal and
-(optionally) external signals to calculate a ideal buy and sell
-price and a "break-even spread", which is the spread at which
-a buy-sell sequence's tx fees equal its profit. These values can
-be used as inputs into one of five "gap strategies", which determine
-the target spread.
-
-The bot can be created, started, updated, paused, and retired. Each
-of those actions generates a notification. (img cand)
+A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added to **core**. The bot uses some internal and (optionally) external signals to calculate a ideal buy and sell price and a "break-even spread", which is the spread at which a buy-sell sequence's tx fees equal its profit. These values can be used as inputs into one of five "gap strategies", which determine the target spread. The bot can be created, started, updated, paused, and retired. Each of those actions generates a notification.
 
 Client:
 
@@ -238,30 +229,25 @@ Client:
 - Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields.
 - Advanced [pre-order options](https://github.com/decred/dcrdex/pull/1885) can now be shown and hidden. {?}
 - Improvements to syncing and [sync status](https://github.com/decred/dcrdex/pull/1955).
-- Implemented [order queueing](https://github.com/decred/dcrdex/pull/1887).  (img cand)
+- Implemented [order queueing](https://github.com/decred/dcrdex/pull/1887).
 - Database [path](https://github.com/decred/dcrdex/pull/1951) logged on startup.
 - Now properly [unlocks unmixed accounts](https://github.com/decred/dcrdex/pull/1954) in mixed account configurations in order to prevent failure of transaction refunds.
 - Fixes to [mmbot](https://github.com/decred/dcrdex/pull/1866).
-- Added support for "self-governed" trades when the [server is down](https://github.com/decred/dcrdex/pull/1866). This change allows such trades to be loaded on startup even when
-the asset configurations are unavailable from the server for any
-reason. The lack of a market configuration or a DEX connection are also
-conditions for special handling.
+- Added support for "self-governed" trades when the [server is down](https://github.com/decred/dcrdex/pull/1866). This change allows such trades to be loaded on startup even when the asset configurations are unavailable from the server for any reason. The lack of a market configuration or a DEX connection are also conditions for special handling.
 
 Server:
 
 Major work completed towards support for fidelity bonds. {?}
 
-- Ensured 'txindex' is [enabled](https://github.com/decred/dcrdex/pull/1973) by fetching information for a coinbase transaction of a given block which is essential for dex activities as it could be fatal for btc clone markets if this is not enabled. 
+- Ensured `txindex` is [enabled](https://github.com/decred/dcrdex/pull/1973) by fetching information for a coinbase transaction of a given block which is essential for dex activities as it could be fatal for btc clone markets if this is not enabled. 
 - Improvements to the way [Doge fees](https://github.com/decred/dcrdex/pull/1965) are handled.
-- Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in 'markets.json'.
-- Added 'BondCoin' [bond locator](https://github.com/decred/dcrdex/pull/1819) method.
+- Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in `markets.json`.
+- Added `BondCoin` [bond locator](https://github.com/decred/dcrdex/pull/1819) method.
 - Added necessary [archiver methods](https://github.com/decred/dcrdex/pull/1819) to create accounts with bonds, add new bonds to existing accounts, and remove expired bonds.
 
 DCR
 
-- Fixed 'Swapconfirmations' not doing a [block filters scan](https://github.com/decred/dcrdex/pull/1866).
-
-
+- Fixed `Swapconfirmations` not doing a [block filters scan](https://github.com/decred/dcrdex/pull/1866).
 
 BTC 
 
@@ -280,7 +266,7 @@ Other
 - Fixed wallet [enable delay](https://github.com/decred/dcrdex/pull/1866).
 - Various other tweaks/fixes.
 
-
+{ image candidates: 1738 1887 }
 
 
 ### dcrdata
