Dev DEX better explain 2 marked changes

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -225,9 +225,9 @@ Client:
 
 - Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed.
 - Fixed bug where [orders](https://github.com/decred/dcrdex/pull/1971) would be retired/non-existent but still booked on the server.
-- Fixed issue where [unknown orders](https://github.com/decred/dcrdex/pull/1889) would be blindly canceled on connect. {?}
+- Cancel orders that the client [doesn't know about](https://github.com/decred/dcrdex/pull/1889). This fixes a variety of edge cases encountered in the wild where the client could lose some of its orders (e.g. by using a corrupt database file, failing to save orders, etc.).
 - Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields.
-- Advanced [pre-order options](https://github.com/decred/dcrdex/pull/1885) can now be shown and hidden. {?}
+- Show or hide [advanced order options](https://github.com/decred/dcrdex/pull/1885) by default.
 - Improvements to syncing and [sync status](https://github.com/decred/dcrdex/pull/1955).
 - Implemented [order queueing](https://github.com/decred/dcrdex/pull/1887).
 - Database [path](https://github.com/decred/dcrdex/pull/1951) logged on startup.
