--- a/journal/202211.md
+++ b/journal/202211.md
@@ -221,17 +221,18 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 [v0.5.5 release](https://github.com/decred/dcrdex/releases/tag/v0.5.5):
 
-- [Updated btcd](https://github.com/decred/dcrdex/pull/1935) due to block deserialization failure.
+- Fixed a bad revision of goleveldb that was pulled in by go-ethereum by manually [downgrading](https://github.com/decred/dcrdex/pull/1938) it.
+- Fixed another issue with [big Taproot transactions](https://github.com/decred/dcrdex/pull/1936) on Bitcoin mainnet by upgrading btcd again.
 
 [v0.5.6 release](https://github.com/decred/dcrdex/releases/tag/v0.5.6):
 
-- Now properly [unlocks unmixed accounts](https://github.com/decred/dcrdex/pull/1954) in mixed account configurations in order to prevent failure of transaction refunds.
-- Improvements to syncing and [sync status](https://github.com/decred/dcrdex/pull/1955).
+- Fixed [unmixed account](https://github.com/decred/dcrdex/pull/1954) not being unlocked in some mixed account configurations, in order to prevent failure of swap refunds.
+- Fixed built-in DCR wallets reported as [ready](https://github.com/decred/dcrdex/pull/1955) too soon.
 
 [v0.5.7 release](https://github.com/decred/dcrdex/releases/tag/v0.5.7):
 
 - Cancel orders that the client [doesn't know about](https://github.com/decred/dcrdex/pull/1889). This fixes a variety of edge cases encountered in the wild where the client could lose some of its orders (e.g. by using a corrupt database file, failing to save orders, etc.).
-- Fixed bug where [orders](https://github.com/decred/dcrdex/pull/1971) would be retired/non-existent but still booked on the server.
+- Fixed bug where [orders](https://github.com/decred/dcrdex/pull/1971) would be retired/non-existent on the client but still booked on the server. It could happen if the client initiates trade order cancellation, fails to respond to a [preimage request](https://github.com/decred/dcrdex/blob/75bb91da9b2f65b52835cb8235bcc1a7fd7b893b/spec/orders.mediawiki#order-commitment) from the server (e.g. by briefly disconnecting), and incorrectly marks the trade order as [revoked](https://github.com/decred/dcrdex/pull/1971), while in reality the cancellation has failed and the trade order is still booked on the server.
 
 A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added to **core**. The bot uses some internal and (optionally) external signals to calculate a ideal buy and sell price and a "break-even spread", which is the spread at which a buy-sell sequence's tx fees equal its profit. These values can be used as inputs into one of five "gap strategies", which determine the target spread. The bot can be created, started, updated, paused, and retired. Each of those actions generates a notification.
 
