--- a/journal/202211.md
+++ b/journal/202211.md
@@ -238,23 +238,22 @@ A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added 
 
 Client:
 
-- Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed.
-- Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields.
-- Show or hide [advanced order options](https://github.com/decred/dcrdex/pull/1885) by default.
-- Implemented [order queueing](https://github.com/decred/dcrdex/pull/1887).
-- Database [path](https://github.com/decred/dcrdex/pull/1951) logged on startup.
-- Fixes to [mmbot](https://github.com/decred/dcrdex/pull/1866).
 - Added support for "self-governed" trades when the [server is down](https://github.com/decred/dcrdex/pull/1866). This change allows such trades to be loaded on startup even when the asset configurations are unavailable from the server for any reason. The lack of a market configuration or a DEX connection are also conditions for special handling.
+- Database [path](https://github.com/decred/dcrdex/pull/1951) logged on startup.
+- Implemented [order queueing](https://github.com/decred/dcrdex/pull/1887).
+- Show or hide [advanced order options](https://github.com/decred/dcrdex/pull/1885) by default.
+- Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields.
+- Fixes to [mmbot](https://github.com/decred/dcrdex/pull/1866).
+- Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed.
 
 Server:
 
-Major work completed towards support for fidelity bonds. {?}
-
-- Ensured `txindex` is [enabled](https://github.com/decred/dcrdex/pull/1973) by fetching information for a coinbase transaction of a given block which is essential for dex activities as it could be fatal for btc clone markets if this is not enabled. 
-- Improvements to the way [Doge fees](https://github.com/decred/dcrdex/pull/1965) are handled.
-- Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in `markets.json`.
-- Added `BondCoin` [bond locator](https://github.com/decred/dcrdex/pull/1819) method.
+- Major work completed towards support for fidelity bonds. {?}
 - Added necessary [archiver methods](https://github.com/decred/dcrdex/pull/1819) to create accounts with bonds, add new bonds to existing accounts, and remove expired bonds.
+- Added `BondCoin` [bond locator](https://github.com/decred/dcrdex/pull/1819) method.
+- Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in `markets.json`.
+- Improvements to the way [Doge fees](https://github.com/decred/dcrdex/pull/1965) are handled.
+- Ensured `txindex` is [enabled](https://github.com/decred/dcrdex/pull/1973) by fetching information for a coinbase transaction of a given block which is essential for dex activities as it could be fatal for btc clone markets if this is not enabled. 
 
 DCR
 
@@ -262,8 +261,8 @@ DCR
 
 BTC 
 
-- Users can now [manage](https://github.com/decred/dcrdex/pull/1931) and see the peers that the BTC SPV wallets are connected to, as well as add new peers.
 - SPV test made [more robust](https://github.com/decred/dcrdex/pull/1939).
+- Users can now [manage](https://github.com/decred/dcrdex/pull/1931) and see the peers that the BTC SPV wallets are connected to, as well as add new peers.
 
 UI
 
@@ -271,9 +270,9 @@ UI
 
 Other
 
-- Fixed [error](https://github.com/decred/dcrdex/pull/1953) on markets page for unsupported wallets. Fixed panic when trying to create specific wallets.
-- Ensure [redeemed matches](https://github.com/decred/dcrdex/pull/1948) are confirmed.
 - Fixed wallet [enable delay](https://github.com/decred/dcrdex/pull/1866).
+- Ensure [redeemed matches](https://github.com/decred/dcrdex/pull/1948) are confirmed.
+- Fixed [error](https://github.com/decred/dcrdex/pull/1953) on markets page for unsupported wallets. Fixed panic when trying to create specific wallets.
 - Various other tweaks/fixes.
 
 { image candidates: 1738 1887 }
