--- a/journal/202211.md
+++ b/journal/202211.md
@@ -234,45 +234,45 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 - Cancel orders that the client [doesn't know about](https://github.com/decred/dcrdex/pull/1889). This fixes a variety of edge cases encountered in the wild where the client could lose some of its orders (e.g. by using a corrupt database file, failing to save orders, etc.).
 - Fixed bug where [orders](https://github.com/decred/dcrdex/pull/1971) would be retired/non-existent on the client but still booked on the server. It could happen if the client initiates trade order cancellation, fails to respond to a [preimage request](https://github.com/decred/dcrdex/blob/75bb91da9b2f65b52835cb8235bcc1a7fd7b893b/spec/orders.mediawiki#order-commitment) from the server (e.g. by briefly disconnecting), and incorrectly marks the trade order as [revoked](https://github.com/decred/dcrdex/pull/1971), while in reality the cancellation has failed and the trade order is still booked on the server.
 
-A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added to **core**. The bot uses some internal and (optionally) external signals to calculate a ideal buy and sell price and a "break-even spread", which is the spread at which a buy-sell sequence's tx fees equal its profit. These values can be used as inputs into one of five "gap strategies", which determine the target spread. The bot can be created, started, updated, paused, and retired. Each of those actions generates a notification.
+A [market-maker bot](https://github.com/decred/dcrdex/pull/1738) has been added. The bot uses some internal and (optionally) external signals to calculate an ideal buy and sell price and a "break-even spread", which is the spread at which a buy-sell sequence's tx fees equal its profit. These values can be used as inputs into one of 5 "gap strategies", which determine the target spread. The code is structured to support more trading routines in the future. UI was added to create, configure and monitor existing market maker bots.
 
 Client:
 
-- Added support for "self-governed" trades when the [server is down](https://github.com/decred/dcrdex/pull/1866). This change allows such trades to be loaded on startup even when the asset configurations are unavailable from the server for any reason. The lack of a market configuration or a DEX connection are also conditions for special handling.
-- Database [path](https://github.com/decred/dcrdex/pull/1951) logged on startup.
-- Implemented [order queueing](https://github.com/decred/dcrdex/pull/1887).
+- Added support for "self-governed" trades when the [server is down](https://github.com/decred/dcrdex/pull/1866). Clients need a way to complete started trades even if the server goes down or mysteriously loses the market information.
+- Database [path](https://github.com/decred/dcrdex/pull/1951) is now logged on startup.
+- Made order placement [more responsive](https://github.com/decred/dcrdex/pull/1887). The order form will close sooner and order submission will continue in the background.
 - Show or hide [advanced order options](https://github.com/decred/dcrdex/pull/1885) by default.
-- Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields.
-- Fixes to [mmbot](https://github.com/decred/dcrdex/pull/1866).
-- Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed.
+- Core client now [recognizes](https://github.com/decred/dcrdex/pull/1819) account tiers and bond fields. { _move to own list about bonds_ }
+- Fixes to [mmbot](https://github.com/decred/dcrdex/pull/1866). { _minor, drop_ }
+- Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed. Frequency of fetching fiat rates has been reduced to avoid hitting the rate limits.
 
 Server:
 
 - Major work completed towards support for fidelity bonds. {?}
-- Added necessary [archiver methods](https://github.com/decred/dcrdex/pull/1819) to create accounts with bonds, add new bonds to existing accounts, and remove expired bonds.
-- Added `BondCoin` [bond locator](https://github.com/decred/dcrdex/pull/1819) method.
-- Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in `markets.json`.
-- Improvements to the way [Doge fees](https://github.com/decred/dcrdex/pull/1965) are handled.
-- Ensured `txindex` is [enabled](https://github.com/decred/dcrdex/pull/1973) by fetching information for a coinbase transaction of a given block which is essential for dex activities as it could be fatal for btc clone markets if this is not enabled. 
+- Added necessary [archiver methods](https://github.com/decred/dcrdex/pull/1819) to create accounts with bonds, add new bonds to existing accounts, and remove expired bonds. { _move to bonds section_ }
+- Added `BondCoin` [bond locator](https://github.com/decred/dcrdex/pull/1819) method. { _move to bonds section_ }
+- Updated the main DEX subsystem manager to recognize [bond assets](https://github.com/decred/dcrdex/pull/1819) specified in `markets.json`. { _move to bonds section_ }
+- Fixed calculation of [DOGE fees](https://github.com/decred/dcrdex/pull/1965).
+- Fail fast if [transaction index](https://github.com/decred/dcrdex/pull/1973) is not enabled for Bitcoin-like assets. It is essential for DEX operation, without the index the DEX will fail to look up transactions.
 
 DCR
 
-- Fixed `Swapconfirmations` not doing a [block filters scan](https://github.com/decred/dcrdex/pull/1866).
+- Fixed `Swapconfirmations` not doing a [block filters scan](https://github.com/decred/dcrdex/pull/1866). { _drop, too technical and is part of 1866 already reported above_ }
 
 BTC 
 
-- SPV test made [more robust](https://github.com/decred/dcrdex/pull/1939).
-- Users can now [manage](https://github.com/decred/dcrdex/pull/1931) and see the peers that the BTC SPV wallets are connected to, as well as add new peers.
+- SPV test made [more robust](https://github.com/decred/dcrdex/pull/1939). { _drop, we normally don't report individual changes in test infra, unless they are very big/notable_ }
+- Users can now [see and manage the peers](https://github.com/decred/dcrdex/pull/1931) that the BTC SPV wallets are connected to, as well as add new peers.
 
 UI
 
-- More nuanced [match statuses](https://github.com/decred/dcrdex/pull/1866) and swap steps.
+- More nuanced [match statuses](https://github.com/decred/dcrdex/pull/1866) and swap steps. { _report in the other bullet for 1866_ }
 
 Other
 
-- Fixed wallet [enable delay](https://github.com/decred/dcrdex/pull/1866).
-- Ensure [redeemed matches](https://github.com/decred/dcrdex/pull/1948) are confirmed.
-- Fixed [error](https://github.com/decred/dcrdex/pull/1953) on markets page for unsupported wallets. Fixed panic when trying to create specific wallets.
+- Fixed wallet [enable delay](https://github.com/decred/dcrdex/pull/1866). { _report in the other bullet for 1866_ }
+- Keep revoked matches as "active" until the [redeeming tx is confirmed](https://github.com/decred/dcrdex/pull/1948), which is a bit more robust. { _minor, group?_ }
+- Fixed [error](https://github.com/decred/dcrdex/pull/1953) on markets page for unsupported wallets. Fixed panic when trying to create specific wallets. { _minor, group with other fixes_ }
 - Various other tweaks/fixes.
 
 { image candidates: 1738 1887 }
