--- a/journal/202211.md
+++ b/journal/202211.md
@@ -45,21 +45,10 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
-{
-
-- _For each project, cover its most notable dev work._
-- _For each project, the order of reporting is "most released first": changes released to end users, merged to master, in progress (work started), discussions and future plans._
-- _Add sections for any other project with notable activity._
-- _Drop sections without notable updates._
-
-}
-
 
 ### dcrd
 
 _[dcrd](https://github.com/decred/dcrd) is a full node implementation that powers Decred's peer-to-peer network around the world._
-
-{ _Check_ https://github.com/decred/dcrd/commits/master }
 
 - Update peer [attempt timestamp](https://github.com/decred/dcrd/pull/3014) before trying to connect to it.
 - Simplified how raw transactions and their additional [descriptions](https://github.com/decred/dcrd/pull/3015) are stored in the mempool.
@@ -67,23 +56,23 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 - [Enabled](https://github.com/decred/dcrd/pull/3017) and set [as default](https://github.com/decred/dcrd/pull/3019) new peer-to-peer protocol version that no longer uses the `reject` message. The message was inherited from the original btcsuite codebase and was used to signal that a transaction or a block is ["rejected"](https://en.bitcoin.it/wiki/Protocol_documentation#reject) by a peer. Using this message for pretty much anything was unreliable or incorrect and a [proposal](https://github.com/decred/dcrd/issues/2546) was made to remove it. Peers negotiating to this new protocol version will no longer send `reject` messages and consider it a violation if they receive it. Any peers negotiating to an older version will not be punished for sending `reject` and it will be ignored by newer nodes.
 - Added new [IPC events](https://github.com/decred/dcrd/pull/3020) to notify the parent process of the address and port assigned to dcrd. In configurations where dcrd is controlled by another process like Decrediton or an automated test runner, that parent process needs to know which addresses and ports dcrd uses for its P2P interface (talking to the public network) and RPC interface (local communications with wallets and other clients). This change provides a reliable way to discover dcrd's ports when they are randomly assigned by the operating system and not configured by the parent process.
 - Always respond to [`getheaders`](https://github.com/decred/dcrd/pull/3030) requests from peers. Previous logic would not respond to `getheaders` if the local chain was not considered to be fully synced with the network. In the old "blocks first" syncing model it helped to avoid some undesirable corner cases, like unnecessarily downloading blocks. It had downsides too, like a node could appear to be unresponsive or stalled to its peers, while being active and simply not having any interesting data to share. In the current "headers first" syncing model this limitation is no longer necessary, and serving up headers before the peer is known to be current no longer leads to undesirable behavior.
-- Other internal/infra changes { 3021 3023 3022 }
+- Other internal/infra changes { 3021 3023 3022 - drop after review }
 
 RPC server:
 
 - Optimized WebSocket client disconnection handling and fixed spurious messages when WebSocket clients disconnect.
 - Modified the [lifecycle](https://github.com/decred/dcrd/pull/3025) of WebSocket clients to use contexts, which is more flexible for the calling code.
-- Added [cancellation support](https://github.com/decred/dcrd/pull/3027) for the `getwork` request (used by miners) and optimized handling of multiple concurrent `getwork` requests. { _could not understand deeper what blocked what before, maybe it's enough but can add more_ }
-- RPC testing framework has been extracted into the new `dcrtest/dcrdtest` package in its own repository. It is used to write integration-level tests which exercise features and behaviors of the fully compiled dcrd binary (as opposed to unit tests, which test small parts of the code). { _why was it extracted?_ }
+- Added [cancellation support](https://github.com/decred/dcrd/pull/3027) for the `getwork` request (used by miners) and optimized handling of multiple concurrent `getwork` requests.
+  - { _could not understand deeper what blocked what before, maybe it's enough but can add more_ }
+- RPC testing framework has been extracted into the new `dcrtest/dcrdtest` package in its own repository. It is used to write integration-level tests which exercise features and behaviors of the fully compiled dcrd binary (as opposed to unit tests, which test small parts of the code).
+  - { _why was it extracted?_ }
 
-{ _explain the new dcrtest repo_ }
+{ _introduce the new dcrtest repo_ }
 
 
 ### dcrwallet
 
 _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by command-line and graphical wallet apps._
-
-{ _Check_ https://github.com/decred/dcrwallet/commits/master }
 
 - Updated the [major version](https://github.com/decred/dcrwallet/pull/2189) of the `decred.org/dcrwallet` module to version 3, updated all dependencies of current in-progress modules from dcrd to their corresponding major versions, removed unused code.
 - Allow [piping the answers](https://github.com/decred/dcrwallet/pull/2191) to the `--create` prompts to work properly for not only the initial passphrase prompt, but the confirmation as well. This helps to automate wallet creation (e.g. by piping all answers from a text file).
@@ -155,14 +144,6 @@ Dev tools and docs:
 
 _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-{ _Check these repos:_
-
-- https://github.com/decred/politeia/commits/master
-- https://github.com/decred/politeiagui/commits/master
-- https://github.com/decred/pi-ui/commits/master
-
-}
-
 All changes below are towards the GUI remake on the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure).
 
 [Improved navigation](https://github.com/decred/politeiagui/pull/2866):
@@ -185,8 +166,6 @@ Other:
 
 _[vspd](https://github.com/decred/vspd) is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
 
-{ _Check_ https://github.com/decred/vspd/commits/master }
-
 - Added a [`vote-validator` tool](https://github.com/decred/vspd/pull/335). This allows VSP admins to verify that their vspd deployment is voting correctly according to user preferences.
 - Include [Git commit](https://github.com/decred/vspd/pull/357) in app version string.
 - Added a [reusable HTTP client module](https://github.com/decred/vspd/pull/359) for vspd API consumers. This will be useful for dcrwallet, dcrwebapi, and testing tools such as v3tool. { _logically includes 356 360 - just noting for now_ }
@@ -197,13 +176,6 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node software. LN enables instant and low-cost transactions._
 
-{ _Check these repos:_
-
-- https://github.com/decred/dcrlnd/commits/master
-- https://github.com/decred/dcrlnlpd/commits/master
-
-}
-
 - Updated the [latest](https://github.com/decred/dcrlnd/pull/168) dcrd and dcrwallet test versions. This required fixing the simnet miner to account for the ticket exhaustion error that could happen during mining.
 - Added the [option](https://github.com/decred/dcrlnd/pull/170) to switch the gap policy when generating new addresses to Wrap instead of the default one in dcrwallet. This fixes an [issue](https://github.com/decred/dcrlnd/issues/169) where trying to generate an address for lnwallet to open or close a channel would result in an error.
 
@@ -211,13 +183,6 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 ### DCRDEX
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
-
-{ _Check these repos:_
-
-- https://github.com/decred/dcrdex/commits/master
-- https://github.com/decred/dexweb/commits/master
-
-}
 
 [v0.5.5 release](https://github.com/decred/dcrdex/releases/tag/v0.5.5):
 
@@ -273,8 +238,6 @@ Server:
 
 _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockchain and off-chain data like Politeia proposals, markets, and more._
 
-{ _Check_ https://github.com/decred/dcrdata/commits/master }
-
 - Fixed a [bad goleveldb](https://github.com/decred/dcrdata/pull/1934) revision that was breaking dcrd's database code.
 - Fixed various frontend bugs, importantly ones relating to [treasury spends and adds](https://github.com/decred/dcrdata/pull/1933).
 
@@ -282,8 +245,6 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 ### Rosetta
 
 _[dcrros](https://github.com/decred/dcrros) is a middleware service that provides access to the Decred network via Rosetta API._
-
-{ _Check_ https://github.com/decred/dcrros/commits/master }
 
 - [Upgraded](https://github.com/decred/dcrros/pull/27) to Decred release v1.7.5.
 - Switched the stable version of the Dockerfile to use the recently tagged [v0.2.0 version](https://github.com/decred/dcrros/pull/30) of `dcrros`.
@@ -294,8 +255,6 @@ _[dcrros](https://github.com/decred/dcrros) is a middleware service that provide
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
 
-{ _Check_ https://github.com/decred/dcrweb/commits/master }
-
 - Updated [YouTube link](https://github.com/decred/dcrweb/pull/1096) with new channel alias [@DecredTV](https://www.youtube.com/@DecredTV).
 
 
@@ -304,16 +263,6 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 - { https://matheusd.com/post/op_peel/ }
   - https://matrix.to/#/!kqBAIpKYUzqYFVHorm:decred.org/$TXdw-JqCGgOXCsV9Ey1tY2xgnsl5CDja7CGOKpO7rzs?via=decred.org&via=matrix.org
 - { @dcrtimestampbot repo news }
-
-{ _Check for new/updated repos in:_
-
-- https://github.com/orgs/decred/repositories
-- https://github.com/orgs/planetdecred/repositories
-- https://github.com/orgs/raedahgroup/repositories
-
-}
-
-{ _More exotic dev sources:_ https://github.com/xaur/decred-news/blob/docs/sources.md#development }
 
 
 ## People
