--- a/journal/202211.md
+++ b/journal/202211.md
@@ -292,21 +292,13 @@ Community stats as of Dec 2 (compared to Nov 1):
 
 ## Governance
 
-{ _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
-
 In November the new [treasury](https://dcrdata.decred.org/treasury) received 8,473 DCR worth $186K at November's average rate of $21.92. 2,646 DCR was spent to pay contractors, worth $58K at November's rate, or $70K at October's billing rate of $26.27.
 
-The [treasury spend tx](https://explorer.dcrdata.org/tx/95ebb23a0846417eb1aa6a59bf6b4ad49d8cd72ff44c869d4af366fd1aef402e) had 25 outputs making payments to contractors, ranging from 3 DCR to 1108 DCR. It was approved on Dec 5 with unanimous yes votes.
-
-{ _Other interesting facts/stories about the legacy or new treasury._ }
+The [treasury spend tx](https://dcrdata.decred.org/tx/95ebb23a0846417eb1aa6a59bf6b4ad49d8cd72ff44c869d4af366fd1aef402e) had 25 outputs making payments to contractors, ranging from 3 DCR to 1,108 DCR. It was approved on Dec 5 with unanimous yes votes. This was a fast approval (also called "short-circuit approval" in [the spec](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki)) in 10 days instead of the maximum 12 days of voting. Voter turnout was 49% with 7,037 yes votes out of 14,339 eligible votes that had a chance to vote in the shortened voting period. More detailed view of the treasury spend transaction can be found at the [staging instance](https://tip.dcrdata.org/tx/95ebb23a0846417eb1aa6a59bf6b4ad49d8cd72ff44c869d4af366fd1aef402e) of dcrdata and will soon arrive at the main instance of the block explorer.
 
 As of Dec 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 830,186 DCR (17.8 million USD at $21.48).
 
-The [proposal](https://proposals.decred.org/record/0848cc9) to fund [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) twitter bot with $1,950 was approved with 91.4% yes votes and turnout of 33%.
-
-{ _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
-
-See Politeia Digest [issue {}]({}) for more details on the month's proposals.
+The [proposal](https://proposals.decred.org/record/0848cc9) to fund [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) Twitter bot with $1,950 was approved with 91.4% yes votes and turnout of 33%. One day after the approval @cli\_query [posted an update](https://proposals.decred.org/record/0848cc9/comments/13) on Politeia saying that the bot is active under the new ownership.
 
 
 ## Network
