--- a/journal/202211.md
+++ b/journal/202211.md
@@ -298,6 +298,14 @@ The [treasury spend tx](https://dcrdata.decred.org/tx/95ebb23a0846417eb1aa6a59bf
 
 As of Dec 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 830,186 DCR (17.8 million USD at $21.48).
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Balance_DCR.png)
+
+_Image: Treasury balance history._
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Inflows_Outflows_DCR.png)
+
+_Image: Treasury monthly inflows and outflows._
+
 The [proposal](https://proposals.decred.org/record/0848cc9) to fund [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) Twitter bot with $1,950 was approved with 91.4% yes votes and turnout of 33%. One day after the approval @cli\_query [posted an update](https://proposals.decred.org/record/0848cc9/comments/13) on Politeia saying that the bot is active under the new ownership.
 
 
@@ -309,11 +317,23 @@ The [proposal](https://proposals.decred.org/record/0848cc9) to fund [@dcrtimesta
 
 **Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Network_Daily_Hashrate.png)
+
+_Image: Decred hashrate._
+
 Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
 { _Hint: Fallback links for pool distribution: https://poolbay.io/crypto/54/decred , https://dcrstats.com/pow ._ }
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by {date}: {PoolName n%, ...}.
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Hashrate%20Distribution%20(Phs).png)
+
+_Image: Pool hashrate distribution._
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_Hash_Dist.png)
+
+_Image: Historical pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between {n}-{n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}).
 
@@ -325,13 +345,27 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 { _Optional: mention biggest gainers_ }
 
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png)
+
+_Image: Distribution of tickets managed by VSPs._
+
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed {} dcrd nodes on {date}: v{} - {n}%, ...
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Reachable%20Node%20Versions.png)
+
+_Image: Reachable dcrd node versions._
+
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_NodeDistribution.png)
+
+_Image: Approximate historical dcrd version distribution._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between {n}-{n}K DCR.
 
 { _Optional_ } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
 
 { _Add any interesting analysis or events in the network._ }
+
+{ _Check new charts!_ }
 
 
 ## Ecosystem
