--- a/journal/202211.md
+++ b/journal/202211.md
@@ -442,7 +442,15 @@ Secured the following news articles:
 
 **Selected articles:**
 
-- {}
+- [FTX’s Collapse Intensifies The Need For Decentralized Exchanges](https://www.decredmagazine.com/ftxs-collapse-intensifies-the-need-for-decentralized-exchanges/) by @HassanMaishera
+- [Decred vs Litecoin: best alternatives for Bitcoin?](https://www.decredmagazine.com/decred-vs-litecoin-best-alternatives-for-bitcoin/) by @JoaoPaulo
+- [cli_query Developer Q&A](https://www.decredmagazine.com/cli_query-developer-q-a/) by @PhoenixGreen
+- [Reviewing DEX security](https://www.decredmagazine.com/reviewing-dex-security/) by @BlockchainJew
+- [Decred grows with good governance](https://www.decredmagazine.com/decred-grows-with-good-governance/) by @OfficialCryptos
+- [Decred's Technology Stack Overview](https://www.decredmagazine.com/decreds-technology-stack-overview/) by @PhoenixGreen (img candidate)
+- [FTX - Playing with other peoples money](https://www.decredmagazine.com/ftx-playing-with-other-peoples-money/) by @PhoenixGreen
+- [Brazil new President used Decred Blockchain to improve his campaign!](https://www.decredmagazine.com/brazil-new-president-uses-decred-blockchain-to-improve-his-camapign/) by @JoaoPaulo
+- [Decred’s stand on censorship in the Blockchain](https://www.decredmagazine.com/decreds-stand-on-censorship-in-the-blockchain/) by @BlockchainJew
 
 **Videos:**
 
