--- a/journal/202211.md
+++ b/journal/202211.md
@@ -471,7 +471,7 @@ Many Decred videos are available in audio format on [Decred Magazine podcast](ht
 
 - { First twitter audio https://twitter.com/i/spaces/1OdKrzMMXOXKX , tell what are "spaces" }
 
-- The first Decred Twitter spaces meetup was held on November 21 titled [Decred Open Discussion - Self-Custody is King](https://twitter.com/i/spaces/1OdKrzMMXOXKX). Twitter spaces allows users to actively have live conversations in real time, with users joining and leaving as they please. Users can request the ability to speak from the hosts running the space. Currently, only users on mobile devices can speak, while web users can only listen. 333 users tuned in.
+- The first Decred Twitter spaces meetup was held on November 21 titled [Decred Open Discussion - Self-Custody is King](https://twitter.com/i/spaces/1OdKrzMMXOXKX). Twitter spaces allows users to actively have conversations in real time, with users joining and leaving as they please. Users can request the ability to speak from the hosts running the space. Currently, only users on mobile devices can speak, while web users can only listen. 333 users tuned in.
 
 **Art and fun:**
 
