--- a/journal/202211.md
+++ b/journal/202211.md
@@ -501,11 +501,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In November DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
-
-{ _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
-
-{ _DCRDEX updates, esp. trading volume dynamics._ }
+In November DCR was trading between USD 18.30-28.80 / BTC 0.001146-0.001461. The average daily rate was $21.92.
 
 
 ## Relevant External
