add upcoming event

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -413,15 +413,11 @@ Secured the following news articles:
 
 { _Hint: Summarize any important or interesting facts about each event. Link to https://decredcommunity.github.io/events/index/ for detailed reports._ }
 
-**Attended:**
-
-- {}
-
 **Upcoming:**
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
+- 12/20/2022 at 18:30 UTC+1 - Entrepreneur's Evening - Casablanca, {Morocco}.
 
-{ _Announcements from events ppl._ }
+@arij have been chosen as a panelist for the 17th edition of the Entrepreneur's Evening hosted by JCI Casablanca with the topic "Female Entrepreneurship," where she will share her experience working with Decred project and how it is to work in the blockchain domain as a woman.
 
 
 ## Media
