--- a/journal/202211.md
+++ b/journal/202211.md
@@ -424,13 +424,15 @@ Secured the following news articles:
 
 - [Decred's stand on censorship in the blockchain](https://www.decredmagazine.com/decreds-stand-on-censorship-in-the-blockchain/) by @BlockchainJew
 - [Brazil new president used Decred blockchain to improve his campaign!](https://www.decredmagazine.com/brazil-new-president-uses-decred-blockchain-to-improve-his-camapign/) by @Joao
-- [FTX - Playing with other peoples money](https://www.decredmagazine.com/ftx-playing-with-other-peoples-money/) by @phoenixgreen
-- [Decred's technology stack overview](https://www.decredmagazine.com/decreds-technology-stack-overview/) by @phoenixgreen { img candidate }
+- [FTX - Playing with other peoples money](https://www.decredmagazine.com/ftx-playing-with-other-peoples-money/) - Twitter thread by @jy-p republished on DM
+- [Decred's technology stack overview](https://www.decredmagazine.com/decreds-technology-stack-overview/) by @phoenixgreen
 - [Decred grows with good governance](https://www.decredmagazine.com/decred-grows-with-good-governance/) by @OfficialCryptos
 - [Reviewing DEX security](https://www.decredmagazine.com/reviewing-dex-security/) by @BlockchainJew
 - [cli_query Developer Q&A](https://www.decredmagazine.com/cli_query-developer-q-a/) by @phoenixgreen
 - [Decred vs Litecoin: best alternatives for Bitcoin?](https://www.decredmagazine.com/decred-vs-litecoin-best-alternatives-for-bitcoin/) by @Joao
 - [FTX's collapse intensifies the need for decentralized exchanges](https://www.decredmagazine.com/ftxs-collapse-intensifies-the-need-for-decentralized-exchanges/) by @HassanMaishera
+
+{ image candidate: technology stack }
 
 **Videos:**
 
